--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,9 @@
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
-/[Bb]uilds/
+# /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-Library
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -57,7 +56,7 @@ ExportedObj/
 sysinfo.txt
 
 # Builds
-*.apk
+# *.apk
 *.aab
 *.unitypackage
 *.app
